--- a/03_BaiKTWebStorm/index.html
+++ b/03_BaiKTWebStorm/index.html
@@ -5,41 +5,52 @@
     <title>Title</title>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>
-        function findByName(){
-            let name = document.getElementById("search").value;
-                $.ajax({
-                type: "GET",
-                url: "http://localhost:8080/api-products/"+name,
-                success: function (products) {
-                    let str = "<h3>List Product</h3>"+
-                        "<table border='2px'>" +
-                        "    <tr>" +
-                        "        <th>Name</th>" +
-                        "        <th>Price</th>" +
-                        "        <th>Quantity</th>" +
-                        "        <th>Color</th>" +
-                        "        <th>Description</th>" +
-                        "        <th>Category</th>" +
-                        "        <th>Action</th>" +
-                        "    <tr>\n";
-                    for (let i = 0; i < products.length; i++) {
-                        str += '<tr><td><a onclick="viewDetail(' + products[i].id + ')">'
-                            + products[i].name + '</a></td>'+'<td>'+products[i].price+'</td><td>'
-                            +products[i].quantity+'</td><td>'+products[i].color+'</td><td>'
-                            +products[i].description+'</td><td>'+products[i].category.name+'' +
-                            '</td><td><a onclick="formEdit(' + products[i].id + ')">Edit</a>|<a onclick="formDelete(' + products[i].id + ')">Delete</a></td></tr>';
+        function findByName() {
+            let name = document.getElementById("keySearch").value;
+            let product = {
+                "name": name
+            }
+            $.ajax({
+                headers: {
+                    'Accept': 'application/json',
+                    'Content-type': 'application/json'
+                },
+                type: "POST",
+                data: JSON.stringify(product),
+                url: "http://localhost:8080/api-products/search",
+                success:
+                    function (products) {
+                        let str = "<h3>List Product</h3>" +
+                            "<table border='2px'>" +
+                            "    <tr>" +
+                            "        <th>Name</th>" +
+                            "        <th>Price</th>" +
+                            "        <th>Quantity</th>" +
+                            "        <th>Color</th>" +
+                            "        <th>Description</th>" +
+                            "        <th>Category</th>" +
+                            "        <th>Action</th>" +
+                            "    <tr>";
+                        for (let i = 0; i < products.length; i++) {
+                            str += '<tr><td><a onclick="viewDetail(' + products[i].id + ')">'
+                                + products[i].name + '</a></td>' + '<td>' + products[i].price + '</td><td>'
+                                + products[i].quantity + '</td><td>' + products[i].color + '</td><td>'
+                                + products[i].description + '</td><td>' + products[i].category.name + '' +
+                                '</td><td><a onclick="formEdit(' + products[i].id + ')">Edit</a>|<a onclick="formDelete(' + products[i].id + ')">Delete</a></td></tr>';
+                        }
+                        str += '</table>',
+                            document.getElementById("sub-main").innerHTML = str
+                        console.log(products)
                     }
-                    str+='</table>',
-                        document.getElementById("main").innerHTML = str;
-                }
             });
         }
-        function findAllProduct(){
+
+        function findAllProduct() {
             $.ajax({
                 type: "GET",
                 url: "http://localhost:8080/api-products",
                 success: function (products) {
-                    let str = "<input type='text' id='seacrh'><button onclick='findByName()'>Search</button><br><h3>List Product</h3>"+
+                    let str = "<h3>List Product</h3>" +
                         "<table border='2px'>" +
                         "    <tr>" +
                         "        <th>Name</th>" +
@@ -52,13 +63,13 @@
                         "    <tr>\n";
                     for (let i = 0; i < products.length; i++) {
                         str += '<tr><td><a onclick="viewDetail(' + products[i].id + ')">'
-                            + products[i].name + '</a></td>'+'<td>'+products[i].price+'</td><td>'
-                            +products[i].quantity+'</td><td>'+products[i].color+'</td><td>'
-                            +products[i].description+'</td><td>'+products[i].category.name+'' +
+                            + products[i].name + '</a></td>' + '<td>' + products[i].price + '</td><td>'
+                            + products[i].quantity + '</td><td>' + products[i].color + '</td><td>'
+                            + products[i].description + '</td><td>' + products[i].category.name + '' +
                             '</td><td><a onclick="formEdit(' + products[i].id + ')">Edit</a>|<a onclick="formDelete(' + products[i].id + ')">Delete</a></td></tr>';
                     }
-                    str+='</table>',
-                    document.getElementById("main").innerHTML = str;
+                    str += '</table>',
+                        document.getElementById("main").innerHTML = str;
                 }
             });
         }
@@ -95,7 +106,7 @@
             let product = {
                 name: name,
                 price: price,
-                quantity:quantity,
+                quantity: quantity,
                 color: color,
                 description: desc,
                 category: {
@@ -110,43 +121,45 @@
                 type: "POST",
                 url: "http://localhost:8080/api-products",
                 data: JSON.stringify(product),
-                success: findAllProduct() ,
+                success: findAllProduct,
                 error: function (error) {
 
                 }
             });
         }
+
         function viewDetail(id) {
             $.ajax({
                 type: "GET",
-                url: "http://localhost:8080/api-products/"+id,
+                url: "http://localhost:8080/api-products/" + id,
                 success: function (data) {
-                    let str =  'Information! <br> ID : <input type="text" id="name" disabled value="'+data.id+'"><br>' +
-                        'Name : <input type="text" id="name" disabled value="'+data.name+'"><br>' +
-                        'Price : <input type="number" id="price" disabled value="'+data.price+'"><br>' +
-                        'Quantity : <input type="number" id="quantity" disabled value="'+data.quantity+'"> <br>' +
-                        'Color : <input type="text" id="color" disabled value="'+data.color+'"><br> ' +
-                        'Description : <input type="text" disabled id="description" value="'+data.description+'"> <br>' +
-                        'Category: <input type="text" disabled id="description" value="'+data.category.name+'"> <br>'
+                    let str = 'Information! <br> ID : <input type="text" id="name" disabled value="' + data.id + '"><br>' +
+                        'Name : <input type="text" id="name" disabled value="' + data.name + '"><br>' +
+                        'Price : <input type="number" id="price" disabled value="' + data.price + '"><br>' +
+                        'Quantity : <input type="number" id="quantity" disabled value="' + data.quantity + '"> <br>' +
+                        'Color : <input type="text" id="color" disabled value="' + data.color + '"><br> ' +
+                        'Description : <input type="text" disabled id="description" value="' + data.description + '"> <br>' +
+                        'Category: <input type="text" disabled id="description" value="' + data.category.name + '"> <br>'
                     document.getElementById("sub-main").innerHTML = str;
                 },
 
             });
 
         }
+
         function formEdit(id) {
             $.ajax({
                 type: "GET",
-                url: "http://localhost:8080/api-products/"+id,
+                url: "http://localhost:8080/api-products/" + id,
                 success: function (data) {
-                    let str =  'Information! <br>ID : <input type="hidden" id="id" value="'+data.id+'"><br>\'' +
-                        'Name : <input type="text" id="name" value="'+data.name+'"><br>' +
-                        'Price : <input type="number" id="price" value="'+data.price+'"><br>' +
-                        'Quantity : <input type="number" id="quantity" value="'+data.quantity+'"> <br>' +
-                        'Color : <input type="text" id="color" value="'+data.color+'"><br> ' +
-                        'Description : <input type="text" id="description" value="'+data.description+'"> <br>' +
-                        'Category: <select name="" value="'+data.category.name+'" id="category"></select> <br>'+
-                        '<button onclick="save('+data.id+')">Save</button>'
+                    let str = 'Information! <br>ID : <input type="hidden" id="id" value="' + data.id + '"><br>\'' +
+                        'Name : <input type="text" id="name" value="' + data.name + '"><br>' +
+                        'Price : <input type="number" id="price" value="' + data.price + '"><br>' +
+                        'Quantity : <input type="number" id="quantity" value="' + data.quantity + '"> <br>' +
+                        'Color : <input type="text" id="color" value="' + data.color + '"><br> ' +
+                        'Description : <input type="text" id="description" value="' + data.description + '"> <br>' +
+                        'Category: <select name="" value="' + data.category.name + '" id="category"></select> <br>' +
+                        '<button onclick="save(' + data.id + ')">Save</button>'
                     document.getElementById("main").innerHTML = str;
                     $.ajax({
                         type: "GET",
@@ -165,7 +178,8 @@
             });
 
         }
-        function save(id){
+
+        function save(id) {
             let name = document.getElementById("name").value;
             let price = document.getElementById("price").value;
             let quantity = document.getElementById("quantity").value;
@@ -175,7 +189,7 @@
             let product = {
                 name: name,
                 price: price,
-                quantity:quantity,
+                quantity: quantity,
                 color: color,
                 description: desc,
                 category: {
@@ -188,7 +202,7 @@
                     'Content-Type': 'application/json'
                 },
                 type: "PUT",
-                url: "http://localhost:8080/api-products/"+id,
+                url: "http://localhost:8080/api-products/" + id,
                 data: JSON.stringify(product),
                 success: findAllProduct,
                 error: function (error) {
@@ -196,19 +210,20 @@
                 }
             });
         }
+
         function formDelete(id) {
             $.ajax({
                 type: "GET",
-                url: "http://localhost:8080/api-products/"+id,
+                url: "http://localhost:8080/api-products/" + id,
                 success: function (data) {
-                    let str =  'Bạn có chắc là muốn xóa nó không! <br>ID : <input disabled type="text" value="'+data.id+'"><br>\'' +
-                        'Name : <input type="text" disabled value="'+data.name+'"><br>' +
-                        'Price : <input type="number" disabled value="'+data.price+'"><br>' +
-                        'Quantity : <input type="number" disabled value="'+data.quantity+'"> <br>' +
-                        'Color : <input type="text" disabled value="'+data.color+'"><br> ' +
-                        'Description : <input type="text" disabled value="'+data.description+'"> <br>' +
-                        'Category: <input name=""  value="'+data.category.name+'">'+
-                        '<button onclick="remove('+data.id+')">Delete</button><button onclick="findAllProduct()">Back to list procudt</button>'
+                    let str = 'Bạn có chắc là muốn xóa nó không! <br>ID : <input disabled type="text" value="' + data.id + '"><br>\'' +
+                        'Name : <input type="text" disabled value="' + data.name + '"><br>' +
+                        'Price : <input type="number" disabled value="' + data.price + '"><br>' +
+                        'Quantity : <input type="number" disabled value="' + data.quantity + '"> <br>' +
+                        'Color : <input type="text" disabled value="' + data.color + '"><br> ' +
+                        'Description : <input type="text" disabled value="' + data.description + '"> <br>' +
+                        'Category: <input name=""  value="' + data.category.name + '">' +
+                        '<button onclick="remove(' + data.id + ')">Delete</button><button onclick="findAllProduct()">Back to list procudt</button>'
                     document.getElementById("main").innerHTML = str;
 
                 },
@@ -216,14 +231,15 @@
             });
 
         }
-        function remove(id){
+
+        function remove(id) {
             $.ajax({
                 headers: {
                     'Accept': 'application/json',
                     'Content-Type': 'application/json'
                 },
                 type: "DELETE",
-                url: "http://localhost:8080/api-products/"+id,
+                url: "http://localhost:8080/api-products/" + id,
                 success: findAllProduct,
                 error: function (error) {
 
@@ -237,6 +253,8 @@
 <div>
     <button onclick="showFormCreate()">Create</button>
     <button onclick="findAllProduct()">Home</button>
+        <input type="text" id="keySearch">
+        <button onclick="findByName()">Search</button>
 </div>
 <div id="main">
     Main
